# calc_type_reg--text_detect

./: .gitignore  readme  url.txt
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo.cpp
src/ai_model/include/: DetApi.h  cls_num_rec.hpp  dataType.h  det_and_reg.h  my_util.h  ocrJietiInterface.h  ocrNumInterface.h  rotateInterface.h
src/ai_model/include/darknet/: DetApi.h  Det_api.h
src/ai_model/lib/: libcls_num_rec.so.14.100.1.0.0.1
